Improved Nominal planner
Runtime improvements on nominal planner initiation